Added Coop A*, still a few bugs and edge cases which don't work but is getting to a usable state.