@@ -1,103 +1,93 @@
-package aw.routePlanning;
 
 import java.util.HashMap;
-import java.util.LinkedList;
+import java.util.ArrayList;
 
 public class AStar {
 	private int[][] heuristicMap;
 	private int[][] movementCostMap;
 	private int[][] totalCostMap;
-	
+	private boolean[][] walkable;
 
 	private final int width = 12;
 	private final int height = 8;
 
-	private LinkedList<Node> openSet;
-	private LinkedList<Node> closeSet;
+	private ArrayList<Node> openSet;
+	private ArrayList<Node> closeSet;
 
 	private HashMap<Node, Node> previousNodeMap;
+	
+	
+	private ArrayList<Node> finalPath;
 
-	private LinkedList<Node> finalPath;
-
-	public AStar(Node start, Node goal, SpaceAndTime spaceAndTime, MapObstacles robot) {
+	public AStar(Node start, Node goal) {
 		heuristicMap = new int[width][height];
 		movementCostMap = new int[width][height]; // g score
 		previousNodeMap = new HashMap<Node, Node>();
 		totalCostMap = new int[width][height]; // f score
+		walkable = new boolean[width][height];
 
-		openSet = new LinkedList<Node>();
-		closeSet = new LinkedList<Node>();
+		openSet = new ArrayList<Node>();
+		closeSet = new ArrayList<Node>();
 		// setting all default values
 		for (int x = 0; x < width; x++) {
 			for (int y = 0; y < height; y++) {
-				heuristicMap[x][y] = (int) (Math.abs(goal.getX() - x) + Math.abs(goal.getY() - y));
+				heuristicMap[x][y] = (int) (Math.abs(goal.getX() -x)
+						+ Math.abs(goal.getY() - y));
 
 				movementCostMap[x][y] = Integer.MAX_VALUE;
 
 				totalCostMap[x][y] = Integer.MAX_VALUE;
 
-
+				walkable[x][y] = true;
 
 			}
 		}
-		
-	
-		
-	}
-
-	private void whichRobot(Node path, MapObstacles robot, Map map) {
-		if (robot.equals(MapObstacles.ROBOTONE)) {
-			map.update(path, MapObstacles.ROBOTONE);
-		} else if (robot.equals(MapObstacles.ROBOTTWO)) {
-			map.update(path, MapObstacles.ROBOTTWO);
-		} else if (robot.equals(MapObstacles.ROBOTTHREE)) {
-			map.update(path, MapObstacles.ROBOTTHREE);
-		}
-	}
-
-	private void addMap(Map map, int i){
-		for (int x = 0; x < width; x++) {
-			for (int y = 0; y < height; y++) {
-				if (!map.getMapObstacle(x,y).equals(MapObstacles.EMPTY)){
-				
-					this.closeSet.add(new Node(x,y));
-				}
+		// creating obstacles in the map
+		for (int x = 1; x < width; x += 3) {
+			for (int y = 1; y < 6; y++) {
+			walkable[x][y] = false;
+			closeSet.add(new Node(x,y));
 			}
 		}
 
+		this.finalPath = findRoute(start, goal);
+		
 	}
 
-	 LinkedList<Node> findRoute(Node start, Node goal, SpaceAndTime spaceAndTime, MapObstacles robot) {
+	private ArrayList<Node> findRoute(Node start, Node goal) {
 		// adding start node to the openSet
 		openSet.add(start);
 		Node currentNode;
-
+	
 		movementCostMap[start.getX()][start.getY()] = 0;
 		while (!openSet.isEmpty()) {
-
+		
 			currentNode = getSmallestValue();
-
+			
+		
 			openSet.remove(currentNode);
 			closeSet.add(currentNode);
-
+		
+			
 			if (currentNode.equals(goal)) {
-				
+			
 				// return completed path
 				return constructPath(currentNode);
 			}
 
 			for (int x = currentNode.getX() - 1; x <= currentNode.getX() + 1; x++) {
 				for (int y = currentNode.getY() - 1; y <= currentNode.getY() + 1; y++) {
-					if (x < width && x >= 0 && y >= 0 && y < height
-							&& (x == currentNode.getX() || y == currentNode.getY())) {
-
+					if (x < width && x >= 0 && y >= 0 && y < height && (x == currentNode.getX() || y == currentNode.getY())) {
+							
+					
+						
 						Node neighbour = new Node(x, y);
-
+					
 						if (closeSet.contains(neighbour)) {
 							// go to next loop
 							continue;
 						}
-
+			
 						int tentativeGScore = movementCostMap[currentNode.getX()][currentNode.getY()] + 1;
 						if (!openSet.contains(neighbour)) {
 							openSet.add(neighbour);
@@ -109,20 +99,20 @@ public class AStar {
 						movementCostMap[neighbour.getX()][neighbour.getY()] = tentativeGScore;
 						totalCostMap[neighbour.getX()][neighbour.getY()] = tentativeGScore
 								+ heuristicMap[neighbour.getX()][neighbour.getY()];
-
+						
 					}
 				}
 			}
 
 		}
 		// no path found
-		new RuntimeException("found");
+		new Exception("no path found");
 		return null;
 
 	}
 
-	private LinkedList<Node> constructPath(Node currentNode) {
-		LinkedList<Node> path = new LinkedList<>();
+	private ArrayList<Node> constructPath(Node currentNode) {
+		ArrayList<Node> path = new ArrayList<>();
 		path.add(currentNode);
 		while (previousNodeMap.keySet().contains(currentNode)) {
 			currentNode = previousNodeMap.get(currentNode);
@@ -132,16 +122,16 @@ public class AStar {
 		return path;
 	}
 
-	public LinkedList<Node> getPath() {
+	public ArrayList<Node> getPath() {
 		return this.finalPath;
 	}
 
 	private Node getSmallestValue() {
 		Node min;
-		min = openSet.getFirst();
+		min = openSet.get(0);
 		for (Node n : openSet) {
-			if (totalCostMap[n.getX()][n.getY()] < totalCostMap[min.getX()][min.getY()]) {
-
+			if (totalCostMap[n.getX()][ n.getY()] < totalCostMap[min.getX()][min.getY()]) {
+				
 				min = n;
 			}
 		}
